# json-parser-haskell

./: .gitignore  2  LICENSE  README.md  json-parser.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: array-of-obj.json  array.json  nested-arrays.json  nested.json
src/: Json.hs  JsonParser.hs
src/JsonParser/: Json.hs  Parser.hs  Utils.hs
