cabal-version:      3.0
name:               json-parser
version:            0.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Hadrian Hughes
maintainer:         hadrianhughes@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable json-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.17.2.1
      , json-parser
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules:
    JsonParser
    JsonParser.Json
  hs-source-dirs:
    src
  build-depends:
    base ^>=4.17.0.0
    , containers
  default-language: Haskell2010
